@@ -1,5 +1,12 @@
 2021-12-26  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pvm.h (pvm_make_signed_integral): New prototype.
+	(pvm_make_unsigned_integral): Likewise.
+	* libpoke/pvm-val.c (pvm_make_signed_integral): New function.
+	(pvm_make_unsigned_integral): Likewise.
+
+2021-12-26  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-insn.def: Define PKL_INSN_SSETI.
 	* libpoke/pvm.jitter (sseti): New instruction.
 
